--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@radix-ui/themes": "^3.2.1",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
