--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "pinata": "^2.4.9",
-    "postcss": "^8.5.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -32,8 +31,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
